processed/jira/txt/LU/LU-19986.txt
Key:        LU-19986
Summary:    Avoid "typedef unsigned int bool"
Link:       https://jira.whamcloud.com/browse/LU-19986
Type:       Bug
Priority:   Medium
Status:     Resolved
Resolution: Fixed
Assignee:   Shaun Tancheff
Reporter:   Shaun Tancheff
Created:    Sat, 14 Mar 2026 03:32:13 +0000
Updated:    Sun, 19 Apr 2026 12:46:09 +0000
Resolved:   Sun, 19 Apr 2026 12:46:09 +0000

--- Description ---
Avoid "typedef unsigned int bool"

lutf_global_wrap.c:3238:22: error: ‘bool’ cannot be defined via ‘typedef’
 3238 | typedef unsigned int bool;
      |                      ^~~~
lutf_global_wrap.c:3238:22: note: ‘bool’ is a keyword with ‘-std=c23’ onwards
lutf_global_wrap.c:3238:1: warning: useless type name in empty declaration
 3238 | typedef unsigned int bool;
      | ^~~~~~~

Instead include the header to ensure bool is available:

#include

--- Comment (pjo, Sun, 19 Apr 2026 12:46:09 +0000) ---
Merged for 2.18

--- Comment (gerrit, Sat, 18 Apr 2026 19:39:51 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/64569/

Subject: LU-19986 build: Avoid typedef unsigned int bool

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: b2132eb9d74ca69a676db0f0483b5be1f0304261

--- Comment (gerrit, Sat, 14 Mar 2026 03:39:32 +0000) ---
"Shaun Tancheff " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/64569

Subject: LU-19986 build: Avoid typedef unsigned int bool

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: f22dd9634ecc4833eff9d027b0e158388e29b2c7
